fix canvas alignment

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -268,7 +268,7 @@ body {
 
     .canvas-container {
       height: 100%;
-      width: 82%;
+      width: 79%;
       top: 56px;
       position: fixed;
       overflow-y: auto;
